--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="utf-8">
+  
   <title>Franca</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dawraxuq1/image/upload/v1683497884/FrancaSW/20px_20px_swtiaw.png">
 
 
   <!--Fuentes-->
