--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dawraxuq1/image/upload/v1683497884/FrancaSW/20px_20px_swtiaw.png">
-
+  <link rel="stylesheet" href="node_modules/@swimlane/ngx-charts/bundles/ngx-charts.min.css">
 
   <!--Fuentes-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
